fixed odd x axis scroll appearance with overflow

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -53,6 +53,7 @@
 html, body {
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 #container {
@@ -339,14 +340,12 @@ p.txt { /*general*/
 	margin-top: 160px;
 }
 	
-
 #skills {
 	margin-top: 30px;
 	margin-left: 30px;
 }
 
-ul.txt, li.txt 
-{
+ul.txt, li.txt {
 	font-family: MuseoSans, sans-serif;
 	font-weight: 900;
 	list-style-type: none;
@@ -703,6 +702,10 @@ textarea {
 
 #submit:hover {
 	background-color: #5a5a5a;
+}
+
+#bio {
+
 }
 
 /* ######################## */
